syntax = "proto3";
package isuxportal.proto.services.bench;
option go_package = "github.com/isucon/isucon10-portal/proto.go/isuxportal/services/bench";

service BenchmarkQueue {
  rpc ReceiveBenchmarkJob(ReceiveBenchmarkJobRequest)
      returns (ReceiveBenchmarkJobResponse);

  rpc CancelOwnedBenchmarkJob(CancelOwnedBenchmarkJobRequest)
      returns (CancelOwnedBenchmarkJobResponse);
}

message ReceiveBenchmarkJobRequest {
  string token = 1;
  string instance_name = 2;
  int64 team_id = 3;
}

message ReceiveBenchmarkJobResponse {
  message JobHandle {
    int64 job_id = 1;
    string handle = 2;
    string target_ipv4_address = 3;
    string description_human = 4;
    repeated string all_ipv4_addresses = 5;
  }
  // optional
  JobHandle job_handle = 1;
}

message CancelOwnedBenchmarkJobRequest {
  string token = 1;
  string instance_name = 2;
}

message CancelOwnedBenchmarkJobResponse {}
